--- a/config.json
+++ b/config.json
@@ -1,65 +1,70 @@
 {
   "revName": {
-    "plural": "Voies Lyonnaises",
-    "singular": "Voie Lyonnaise"
+    "plural": "Lignes ReVE",
+    "singular": "Ligne ReVE"
   },
-  "assoName": "La Ville à Vélo",
-  "assoLink": "https://lavilleavelo.org",
-  "slug": "voie-lyonnaise",
-  "center": [
-    4.8312188,
-    45.757198
-  ],
+  "assoName": "Vélo-Cité",
+  "assoLink": "https://velo-cite.org/",
+  "slug": "ligne-reve",
+  "center": [-0.5800364, 44.841225],
   "zoom": 12,
-  "nbVoiesCyclables": 12,
+  "nbVoiesCyclables": 14,
   "colors": [
     {
       "line": 1,
-      "color": "#60A75B"
+      "color": "#36770F"
     },
     {
       "line": 2,
-      "color": "#AC4D35"
+      "color": "#17E3E0"
     },
     {
       "line": 3,
-      "color": "#3B7B64"
+      "color": "#E4AC90"
     },
     {
       "line": 4,
-      "color": "#DC8953"
+      "color": "#75603F"
     },
     {
       "line": 5,
-      "color": "#AF7392"
+      "color": "#2078B4"
     },
     {
       "line": 6,
-      "color": "#396083"
+      "color": "#FFFFFF"
     },
     {
       "line": 7,
-      "color": "#75BCAE"
+      "color": "#A601FF"
     },
     {
       "line": 8,
-      "color": "#7E6D98"
+      "color": "#EF43A9"
     },
     {
       "line": 9,
-      "color": "#EAAB50"
+      "color": "#FF7F1B"
     },
     {
       "line": 10,
-      "color": "#9A8A4B"
+      "color": "#FFFF00"
     },
     {
       "line": 11,
-      "color": "#4DADC9"
+      "color": "#B9369D"
     },
     {
       "line": 12,
-      "color": "#DBABB7"
+      "color": "#E3494C"
+    },
+    {
+      "line": 13,
+      "color": "#B4B4B4"
+    },
+    {
+      "line": 14,
+      "color": "#3AE32F"
     }
   ],
   "transports": [
